# vision-system

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  build_script.sh  cam.txt  compile_commands.json  ideas.txt
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: CUDAConfig.cmake  FindCUDA_Apriltags.cmake
common/: CMakeLists.txt  logger.hpp
common/include/: allocator.h  cpu_device.h  cuda_device.h  cuda_ops.h  device.h  device_manager.h  logger.h  logger.hpp  task.h  task.hpp  tensor.h  zmq_publisher.h  zmq_publisher.hpp  zmq_subscriber.h
common/logger/: BUILD  logger.h  logger_test.cc
common/memory/: BUILD  allocator.h  allocator_tests.cc  buffer.h  cpu_device.h  device.h  device_manager.h  device_tests.cc  device_tracker.h  malloc_allocator.h
common/src/: task.cc  task.cpp
common/task/: BUILD  task.cc  task.h  task_test.cc
common/tests/: CMakeLists.txt  allocator_test.cc  device_tests.cc  logger_test.cc  logger_test.cpp  task_test.cpp  zmq_publisher_test.cpp  zmq_tests.cc
common/zmq_networking/: BUILD  zmq_publisher.h  zmq_publisher_test.cc  zmq_subscriber.h
cuda/postprocess/: april_tag_kernel.cu  april_tag_kernel.h  cuda_bbox.h  postprocess_kernel.cu  postprocess_kernel.h
cuda/preprocess/: preprocess_kernels.cu  preprocess_kernels.h
docker/: Dockerfile.linux
fb_schemas/: april_tag.fbs  april_tag_array.fbs  heart_beat.fbs  imu_info.fbs  use_detection.fbs  vision_pose.fbs  vision_pose_array.fbs
include/: april_tag_runner.hpp  map.hpp  robot_state.h  utils.hpp  vision_container.hpp  vision_runner.hpp
include/estimator/: estimator.hpp  mcl_pose_estimator.hpp
include/geometry/: pose2d.hpp  pose3d.hpp
include/inference/: bbox.hpp  block.h  calibrator.h  common.hpp  config.h  cuda_utils.h  i_inference_engine.hpp  i_model.hpp  inference_engine.hpp  inference_engine_factory.hpp  inference_manager.hpp  inference_utils.hpp  int8_entropy_calibrator.hpp  logging.h  model.h  onnxruntime_inference_engine.hpp  postprocess.h  postprocess.hpp  preprocess.h  tensor.hpp  tensor_factory.hpp  tensor_rt_engine.hpp  tensor_utils.hpp  trt_logger.h  types.h  utils.h  yolo.hpp  yolo_processing.hpp  yololayer.h  yolov7.hpp
include/localization/: particle_filter.hpp  pose_estimator.hpp
include/networking/: image_pub.hpp  imu_pub.hpp  nt_manager.hpp  nt_publisher.hpp  nt_subscriber.hpp  odometry_sub.hpp  state_estimate_pub.hpp  tcp_server.hpp  udp_server.hpp  vision_pub.hpp  zmq_manager.hpp  zmq_publisher.hpp  zmq_subsciber.hpp  zmq_subscriber.hpp
include/utils/: april_tag_utils.hpp  logger.hpp  probability_utils.hpp  task.hpp  task_manager.hpp  timer.h  utils.hpp  zmq_flatbuffers_utils.hpp
include/vision/: Zed.hpp  apriltag_detector.hpp  apriltag_manager.hpp  apriltag_tracker.hpp  camera.hpp  camera_config.hpp  camera_factory.hpp  detection_utils.hpp  detections_playback.hpp  i_camera.hpp  model_factory.hpp  monocular_camera.hpp  object_detector.hpp  tracked_object_info.hpp  tracked_target_info.hpp  zed.hpp
scripts/: format.sh  install_apriltags.sh  install_cppzmq.sh  install_deps.sh  install_eigen.sh  install_flatbuffers.sh  install_onnxruntime.sh  install_opencv.sh  install_wpilib.sh  install_zmq.sh  network_setup.sh  reset_network.sh  setup_service.sh  zmqRecv.py
src/: april_tag_runner.cpp  main.cpp  map.cpp  robot_state.cpp  vision_container.cpp  vision_runner.cpp
src/inference/: block.cpp  calibrator.cpp  inference_manager.cpp  model.cpp  onnxruntime_inference_engine.cpp  postprocess.cpp  preprocess.cu  tensor_rt_engine.cpp  yolo.cpp  yololayer.cu  yolov7.cpp
src/localization/: mcl_pose_estimator.cpp  particle_filter.cpp  pose_estimator.cpp
src/utils/: task.cpp  task_manager.cpp
src/vision/: Zed.cpp  apriltag_detector.cpp  apriltag_manager.cpp  apriltag_tracker.cpp  detections_playback.cpp  monocular_camera.cpp  tracked_object_info.cpp  tracked_target_info.cpp  zed.cpp
tests/: CMakeLists.txt
tools/formatter/: cc_formater.py  formatter.py
vision-system/: CMakeLists.txt
vision-system/include/: system_container.h  zed.h
vision-system/src/: main.cc  system_container.cc  zed.cc
zmq_to_networktables/: CMakeLists.txt
zmq_to_networktables/src/: main.cpp
