module(
    name = "vision_project",
    version = "0.1",
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "flatbuffers", version = "24.3.25")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "libzmq", version = "4.3.5")

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
